--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   mvc:
     view:
-#      prefix: /WEB-INF/views/
+      prefix: /
       suffix: .jsp
 
 mybatis:
