fix: 网页资源加载和静态文件配置

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,15 @@ spring:
     view:
       prefix: /
       suffix: .jsp
+#    static-path-pattern: /**
+#  web:
+#    resources:
+#      static-locations:
+#        - classpath:/META-INF/resources/
+#        - classpath:/resources/
+#        - classpath:/static/
+#        - classpath:/public/
+#        - file:src/main/webapp/
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
